<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--some work to be done-->
<!--<RelativeLayout-->
    <!--android:layout_width=""-->
    <!--android:layout_height=""></RelativeLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/parent_layout"
        >
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signe_up"
            style="@style/sign_up_style"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            style="@style/Sub_text_style"
            />
        <LinearLayout
            android:id="@+id/first_sur_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            >
            <EditText
                android:id="@+id/Ed_First_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/First_name"
                android:background="@drawable/rounded_corner"
                style="@style/Ed_padding"
                android:inputType="textPersonName"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQURSTUVWXYZ"
                />
            <!-- ANDROID:DIGITS IT ALLOW ONLY THIS CHARACTERS-->
            <EditText
                android:id="@+id/Ed_Surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Sur_name"
                android:background="@drawable/rounded_corner"
                android:layout_marginLeft="10dp"
                style="@style/Ed_padding"
                android:inputType="text"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQURSTUVWXYZ"/>
        </LinearLayout>
        <EditText
            android:id="@+id/Ed_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email_mobile"
            android:background="@drawable/rounded_corner"
            style="@style/Ed_padding"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/Ed_Re_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reEmail_mobile"
            android:background="@drawable/rounded_corner"
            style="@style/Ed_padding"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:id="@+id/Ed_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:background="@drawable/rounded_corner"
            style="@style/Ed_padding"
            android:inputType="numberPassword"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Birthday"
            style="@style/Birthday"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
            <Spinner
                android:id="@+id/Sp_Day"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:background="@color/edt_background_color"
                style="@style/Spinners"
               />

            <Spinner
                android:id="@+id/Sp_Mont"
                android:layout_width="70dp"
                android:layout_height="80dp"

                android:background="@color/edt_background_color"
                style="@style/Spinners"/>

            <Spinner
                android:id="@+id/Sp_year"
                android:layout_width="70dp"
                android:layout_height="80dp"

                android:background="@color/edt_background_color"
                style="@style/Spinners"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Providig_Dob"
                style="@style/Providing_Dob"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/Gender_selection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/gender_layout_margin"
            android:orientation="horizontal">
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
            <RadioButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
                android:text="@string/Gender_F"
                style="@style/Gender_Sytle"
                />
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gender_M"
        style="@style/maring_gender"/>
</RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Terms_and_Conditions"
            style="@style/Terms_and_Conditions_Text_Size"
/>
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/SignUp_Text"
            style="@style/Button_bg"
            android:background="@drawable/rounded_button"
            android:onClick="Validate_Edit_Text"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            style="@style/View_margin"
            />
        <LinearLayout
            android:id="@+id/LInk_selction_for_anchor_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/gender_layout_margin"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/click_me"
            android:textColor="@color/click_me"
            style="@style/Click_me"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Celebrating"
                style="@style/Celebrating"
                />
            </LinearLayout>
    </LinearLayout>
</LinearLayout>